<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Created by Rohan Maity on 11/1/21 3:19 PM
  ~  Copyright (c) 2021 . All rights reserved.
  ~  Last modified 11/1/21 3:12 PM
  -->

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/matToolBarMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvScreenTitle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:fontFamily="@font/nova_round"
                        android:gravity="center_vertical"
                        android:textColor="?attr/baseThemeComplimentColor"
                        android:textSize="21sp"
                        android:textStyle="bold"
                        tools:text="@string/upcoming_events" />

                    <FrameLayout
                        android:id="@+id/ivSearchContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:foreground="@drawable/circle_border_yellow">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivSearch"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?selectableItemBackgroundBorderless"
                            android:padding="8dp"
                            android:src="@drawable/ic_search" />
                    </FrameLayout>
                </LinearLayout>

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:paddingStart="0dp"
        android:paddingEnd="8dp"
        app:headerLayout="@layout/nav_header"
        app:itemBackground="@drawable/nav_item_selector"
        app:itemIconTint="@color/nav_item_color_selector"
        app:itemTextColor="@color/nav_item_color_selector"
        app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>