<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Created by Rohan Maity on 11/1/21 3:19 PM
  ~  Copyright (c) 2021 . All rights reserved.
  ~  Last modified 11/1/21 3:12 PM
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_upcomimg"
            android:checked="true"
            android:icon="@drawable/ic_code"
            android:title="@string/nav_up_coming" />

    </group>
    <group
        android:id="@+id/group_option"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_bookmarks"
            android:title="@string/nav_bookmarks" />

        <item
            android:id="@+id/nav_alerts"
            android:icon="@drawable/ic_alert"
            android:title="@string/nav_alerts" />

        <item
            android:id="@+id/nav_archive"
            android:icon="@drawable/ic_archive"
            android:title="@string/nav_archive" />
    </group>

    <group
        android:id="@+id/group_setting"
        android:checkableBehavior="single"
        android:menuCategory="secondary">
        <item
            android:id="@+id/nav_change_theme"
            android:icon="@drawable/ic_invert_colors"
            android:title="@string/nav_change_theme" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/nav_about" />
    </group>
</menu>